<resources>
    <string name="app_name">Universal Remote Control</string>
    <string name="settings">Settings</string>
    <string name="net">Net</string>
    <string name="tv_sony">TV Sony</string>
    <string name="setup">Setup</string>
    <string name="mosaico">Mosaico</string>
    <string name="info">Info</string>
    <string name="itv">ITV</string>
    <string name="audio">Audio</string>
    <string name="agora">Agora</string>
    <string name="message">Message</string>
    <string name="legenda">Legenda</string>
    <string name="portal">Portal</string>
    <string name="musica">Musica</string>
    <string name="now">Now</string>
    <string name="fwd">Fwd</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="ppv">PPV</string>
    <string name="replay">Replay</string>
    <string name="forward">Forward</string>
    <string name="play">Play</string>
    <string name="rew">Rew</string>
    <string name="rewind">Rewind</string>
    <string name="menu">Menu</string>
    <string name="_0">0</string>
    <string name="fav">Fav</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="seta_para_baixo">Seta para baixo</string>
    <string name="seta_para_a_direita">Seta para a direita</string>
    <string name="seta_para_a_esquerda">Seta para a esquerda</string>
    <string name="ok">OK</string>
    <string name="net_tv">Net TV</string>
    <string name="seta_para_cima">seta para cima</string>
    <string name="sair">Sair</string>
    <string name="channel">Channel</string>
    <string name="plus">+</string>
    <string name="minus">&#8212;</string>
    <string name="voltar">Voltar</string>
    <string name="mute">Mute</string>
    <string name="volume_down">Volume down</string>
    <string name="volume_up">Volume up</string>
    <string name="volume">Volume</string>
    <string name="on_off">On/Off</string>
    <string name="ac_midea">AC Midea</string>
    <string name="tv_samsung">TV Samsung</string>
    <string name="receiver_onkio">Receiver Onkio</string>
    <string name="hdmi">HDMI</string>
    <string name="power">Power</string>
    <string name="source">Source</string>
    <string name="pre_ch">Pre-ch</string>
    <string name="ch_list">Ch List</string>
    <string name="smart_nhub">Smart\nHub</string>
    <string name="guide">Guide</string>
    <string name="tools">Tools</string>
    <string name="up">Up</string>
    <string name="left">left</string>
    <string name="right">Right</string>
    <string name="traco">Traço</string>
    <string name="retorna">Return</string>
    <string name="down">Down</string>
    <string name="exit">Exit</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="d">D</string>
    <string name="e_manual">E-Manual</string>
    <string name="srs">SRS</string>
    <string name="p_mode">P.Mode</string>
    <string name="p_size">P.Size</string>
    <string name="cc">CC</string>
    <string name="mts">MTS</string>
    <string name="pause">Pause</string>
    <string name="smsng_c">C</string>
    <string name="ping">Ping</string>
    <string name="copyright_2023_meslin">© 2023 Meslin</string>
    <string name="power_colon">Power:</string>
    <string name="mode_colon">Mode:</string>
    <string name="fan_speed_colon">Fan speed:</string>
    <string name="auto">Auto</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="cool">Cool</string>
    <string name="_26_u00b0c">26°C</string>
    <string name="_25_u00b0c">25°C</string>
    <string name="_24_u00b0c">24°C</string>
    <string name="_23_u00b0c">23°C</string>
    <string name="_22_u00b0c">22°C</string>
    <string name="_21_u00b0c">21°C</string>
    <string name="_20_u00b0c">20°C</string>
    <string name="_19_u00b0c">19°C</string>
    <string name="_18_u00b0c">18°C</string>
    <string name="_17_u00b0c">17°C</string>
    <string name="temp">Temp.:</string>
    <string name="fan">Fan</string>
    <string name="dry">Dry</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="clock">Clock</string>
    <string name="cancel">Cancel</string>
    <string name="timer_on">Timer On</string>
    <string name="timer_off">Timer Off</string>
    <string name="time_adjust">Time Adjust</string>
    <string name="i_o">I/O</string>
    <string name="input">Input</string>
    <string name="theater">Theater</string>
    <string name="fast_rewind">Fast rewind</string>
    <string name="fast_forward">Fast forward</string>
    <string name="sync_menu">Sync Menu</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="bravia_sync">Bravia Sync</string>
    <string name="i_manual">i-Manual</string>
    <string name="scene">Scene</string>
    <string name="wide">Wide</string>
    <string name="favorites">Favorites</string>
    <string name="display">Display</string>
    <string name="options">Options</string>
    <string name="home_menu">Home\nMenu</string>
    <string name="ponto">.</string>
    <string name="ent">Ent</string>
    <string name="muting">Muting</string>
    <string name="cc_subtitle">CC /\nSubtitle</string>
    <string name="txt_return">Return</string>
    <string name="digital_analog">Digital /\nAnalog</string>
    <string name="exit_sair">Exit\nSair</string>
    <string name="internet_video">Internet\nVideo</string>
    <string name="receiver">Receiver</string>
    <string name="receiver_power">Receiver power</string>
    <string name="remote_mode_input_selector">Remote mode/Input selector</string>
    <string name="cbl_sat">CBL/SAT</string>
    <string name="bd_dvd">BD/DVD</string>
    <string name="game">Game</string>
    <string name="pc">PC</string>
    <string name="_auxiliar">Aux</string>
    <string name="mode">Mode</string>
    <string name="zone_2">Zone 2</string>
    <string name="tuner">Tuner</string>
    <string name="tv_cd">TV/CD</string>
    <string name="phono">Phono</string>
    <string name="usb">USB</string>
    <string name="custom">Custom</string>
    <string name="tv">TV</string>
    <string name="tv_power">TV power</string>
    <string name="tv_volume_up">TV volume up</string>
    <string name="ch_disk">+\nCh\nDisk</string>
    <string name="vol">Vol</string>
    <string name="album">Album\n&#8212;</string>
    <string name="just_space">just space</string>
    <string name="muting_for_tv">Muting for TV</string>
    <string name="button_for_zone_2">Button for zone 2</string>
    <string name="receiver_mode">Receiver mode</string>
    <string name="tv_mode">TV mode</string>
    <string name="source_power">Source power</string>
    <string name="tv_volume_down">TV volume down</string>
    <string name="receiver_volume_up">Receiver volume up</string>
    <string name="receiver_volume_down">Receiver volume down</string>
    <string name="action_for_zone_2">Action for zone 2</string>
    <string name="just_a_view_to_fill_ch_disk_and_album">just a view to fill ch disk and album</string>
    <string name="just_a_view_to_fill_tv_volume">Just a view to fill TV volume</string>
    <string name="d_pad">D-Pad</string>
    <string name="ch_dsk">+\nCh Dsk</string>
    <string name="enter">Enter</string>
    <string name="d_pad_up">D-Pad up</string>
    <string name="d_pad_down">D-Pad down</string>
    <string name="d_pad_right">D-Pad right</string>
    <string name="playlist">Playlist</string>
    <string name="top_menu">Top menu</string>
    <string name="sp_guide">SP/Guide</string>
    <string name="q_setup">Q/Setup</string>
    <string name="q">Q</string>
    <string name="prev_ch_or_menu">Prev ch or Menu</string>
    <string name="prev_ch">Prev ch</string>
    <string name="home">Home</string>
    <string name="reverse_play">Reverse play</string>
    <string name="search">Search</string>
    <string name="repeat">Repeat</string>
    <string name="random">Random</string>
    <string name="mode_tv">Mode/TV</string>
    <string name="music">Music</string>
    <string name="stereo">Stereo</string>
    <string name="c">C</string>
    <string name="d_pad_left">D-Pad left</string>
    <string name="top_menu_sp_guide">Top menu / SP/Guide</string>
    <string name="sleep">Sleep</string>
    <string name="d_tun_dimmer">D. Tun / Dimmer</string>
    <string name="clr">Clr</string>
    <string name="plus_10">+10</string>
    <string name="_12">12</string>
    <string name="_11">11</string>
    <string name="fill_10">-/--10</string>
    <string name="air_direction">Air\nDirection</string>
    <string name="swing">Swing</string>
    <string name="economic_running">Economic\nRunning</string>
    <string name="time_adjust_down">Time adjust down</string>
    <string name="time_adjust_up">Time adjust up</string>
    <string name="server_ip_address">Server IP address</string>
    <string name="blink">Blink</string>
    <string name="discovered_devices">Discovered devices:</string>
    <string name="discover_devices">Discover devices</string>
    <string name="ping_loss"> ping loss</string>
    <string name="ping_received"> ping received,</string>
    <string name="ping_sent">ping sent,</string>
</resources>